[FIX] web: allow placeholder to use ellipsis rather than being cut
This commit aims to prevent placeholder being cut in some places leading
to a weird visual result.

If we take a look at the big picture and the use of placeholders across
the back-end, it is obvious that the use of placeholders is not optimal.
Some of them are too long, are more descriptive rather than indicative,
which sometimes lead to very long placeholder being cut by the width of
the input.

At this stage, the easiest way to fix this behavior is to set a
`text-overflow: ellipsis;` CSS property on the placeholder, to prevent
them from being cut.

On the long term, placeholders should be reviewed to be adapted and be
shorter but still add value.

task-3512074

closes odoo/odoo#166515

--- a/addons/web/static/src/views/fields/fields.scss
+++ b/addons/web/static/src/views/fields/fields.scss
@@ -53,6 +53,10 @@
     padding: $o-input-padding-y $o-input-padding-x;
     background-color: var(--o-input-background-color, #{$input-bg});
 
+    &:placeholder-shown {
+        text-overflow: ellipsis;
+    }
+
     // -- Nested o_input(s)
     .o_input {
         border: 0;
